updated footer to correct alignment and formatted footer li as links

--- a/style.css
+++ b/style.css
@@ -101,8 +101,7 @@ section {
 	padding: 100px 0 0 0;
 }
 
-.footer ul li {
-	color: #0393ff;
+.footer ul li, .footer ul h3 {
 	text-decoration: none;
 	text-align: left;
 	list-style-type: none;
